--- a/src/app/modules/challenges/pages/challenges/sections/section-header/section-header.component.scss
+++ b/src/app/modules/challenges/pages/challenges/sections/section-header/section-header.component.scss
@@ -1,14 +1,14 @@
 @import 'styles/kep-imports';
 
 //.challenges-section-header.card {
-//  background: rgba($primary, 0.8);
+//  background: rgba(var(--primary-rgb), 0.8);
 //
 //  @include dark-layout {
-//    background: rgba($primary, 0.5);
+//    background: rgba(var(--primary-rgb), 0.5);
 //  }
 //
 //  .card-footer {
-//    border-color: rgba($primary, 0.1);
+//    border-color: rgba(var(--primary-rgb), 0.1);
 //  }
 //
 //  .text-blue, .text-primary {
