--- a/src/app/modules/contests/pages/contest/contest-standings/contest-standings-countdown/contest-standings-countdown.component.scss
+++ b/src/app/modules/contests/pages/contest/contest-standings/contest-standings-countdown/contest-standings-countdown.component.scss
@@ -77,7 +77,7 @@
         }
 
         @include dark-layout {
-          //color: mix(white, $primary, 30);
+          //color: mix(white, var(--primary), 30);
         }
       }
 
