--- a/src/assets/scss/bootstrap/_tooltips.scss
+++ b/src/assets/scss/bootstrap/_tooltips.scss
@@ -24,7 +24,7 @@
   }
 
   &.tooltip-primary {
-    @include tooltip-color($primary);
+    @include tooltip-color(var(--primary));
   }
 
   &.tooltip-secondary {
