--- a/src/assets/scss/custom/_custom.scss
+++ b/src/assets/scss/custom/_custom.scss
@@ -122,7 +122,7 @@ button {
 }
 
 .simple-list-example-scrollspy .active {
-  background-color: $primary;
+  background-color: var(--primary);
   color: $black;
 }
 
@@ -168,7 +168,7 @@ button {
   display: inline-block;
   width: 10rem;
   color: $text-muted;
-  background-color: $primary-01;
+  background-color: var(--primary01);
   border: var(--default-border);
   border-radius: $default-radius;
 }
@@ -286,7 +286,7 @@ button {
   .position-absolute {
     width: 2rem;
     height: 2rem;
-    background-color: $primary-01;
+    background-color: var(--primary01);
     border-radius: 0.375rem;
   }
 }
@@ -925,7 +925,7 @@ button {
       }
 
       &.color-primary {
-        background-color: $primary;
+        background-color: var(--primary);
       }
 
       &.color-primary-1 {
@@ -949,7 +949,7 @@ button {
       }
 
       &.color-gradient {
-        background-image: $primary-gradient;
+        background-image: var(--primary)-gradient;
       }
 
       &.color-transparent {
@@ -1316,7 +1316,7 @@ button {
 
   &.popular {
     &:after {
-      border-color: $primary-01 transparent transparent transparent;
+      border-color: var(--primary01) transparent transparent transparent;
     }
   }
 }
@@ -1328,8 +1328,8 @@ button {
   width: 7rem;
   height: 7rem;
   line-height: 7rem;
-  border: 1px solid $primary-03;
-  background-color: $primary-01;
+  border: 1px solid var(--primary03);
+  background-color: var(--primary01);
 }
 
 /* End::Team */
@@ -1359,11 +1359,11 @@ button {
   font-weight: 400;
 
   &:hover a {
-    color: $primary;
+    color: var(--primary);
   }
 
   &.active div {
-    color: $primary;
+    color: var(--primary);
   }
 }
 
@@ -1418,7 +1418,7 @@ button {
     content: "";
     width: 50%;
     height: 0.25rem;
-    background: linear-gradient(to right, $primary, $primary-01);
+    background: linear-gradient(to right, var(--primary), var(--primary01));
     inset-inline-start: 25%;
     inset-block-end: -0.65rem;
     border-radius: $default-radius;
@@ -1512,7 +1512,7 @@ button {
     inset-block-start: 5rem;
     inset-block-end: -3rem;
     width: 1px;
-    border: 1px dashed $primary-02;
+    border: 1px dashed var(--primary02);
     inset-inline-start: 12%;
     margin-inline-start: -1.5px;
   }
@@ -1563,11 +1563,11 @@ button {
   height: 1.75rem;
   display: inline-block;
   border-radius: 50%;
-  background: $primary-01;
-  color: $primary;
+  background: var(--primary01);
+  color: var(--primary);
   line-height: 1.65rem;
   font-size: 0.855rem;
-  border: 1px solid $primary-05;
+  border: 1px solid var(--primary05);
 }
 
 .timeline .timeline-body {
@@ -1578,7 +1578,7 @@ button {
 
   .card.card.custom-card {
     &.primary {
-      border-inline-start: 2px solid $primary;
+      border-inline-start: 2px solid var(--primary);
     }
 
     &.secondary {
@@ -1721,7 +1721,7 @@ button {
 
     &.active {
       background-color: transparent;
-      border-block-end: 2px solid $primary;
+      border-block-end: 2px solid var(--primary);
     }
   }
 }
@@ -1738,7 +1738,7 @@ button {
 
 /* Start:: Blog Details */
 .card.custom-card.blockquote-card {
-  border-inline-start-color: $primary !important;
+  border-inline-start-color: var(--primary) !important;
 }
 
 .blog-popular-tags {
@@ -1892,9 +1892,9 @@ button {
 
 /* Start:: Back to Top */
 .scrollToTop {
-  background-color: $primary-01;
-  color: $primary;
-  border: 1px solid $primary;
+  background-color: var(--primary01);
+  color: var(--primary);
+  border: 1px solid var(--primary);
   backdrop-filter: blur(30px);
   position: fixed;
   bottom: 20px;
@@ -2093,7 +2093,7 @@ button {
     height: 100%;
     background: linear-gradient(
         to bottom,
-        $primary-03 0%,
+        var(--primary03) 0%,
         rgba(0, 14, 12, 0.6) 100%
     );
     inset-inline-start: 0;
@@ -2123,7 +2123,7 @@ button {
 }
 
 .lead-discovered .dot-icon {
-  background-color: $primary;
+  background-color: var(--primary);
 }
 
 .lead-qualified .dot-icon {
@@ -2150,11 +2150,11 @@ button {
   background-color: rgba(var(--primary-rgb), 0.07);
 
   .company-name {
-    color: $primary;
+    color: var(--primary);
   }
 
   .avatar {
-    background-color: $primary;
+    background-color: var(--primary);
   }
 }
 
@@ -2331,7 +2331,7 @@ button {
   }
 
   &.active {
-    border-color: $primary !important;
+    border-color: var(--primary) !important;
   }
 }
 
@@ -2339,7 +2339,7 @@ button {
   li {
     &:hover {
       background-color: var(--default-background);
-      color: $primary;
+      color: var(--primary);
     }
   }
 }
@@ -2350,11 +2350,11 @@ button {
 .nft-tag.nft-tag-primary {
   &:hover,
   &.active {
-    color: $primary;
+    color: var(--primary);
   }
 
   .nft-tag-icon {
-    color: $primary;
+    color: var(--primary);
   }
 }
 
@@ -2481,7 +2481,7 @@ button {
 
   &:hover {
     background-color: $custom-white;
-    color: $primary;
+    color: var(--primary);
   }
 }
 
@@ -2518,7 +2518,7 @@ button {
 
 .currency-exchange-card {
   position: relative;
-  background-color: $primary !important;
+  background-color: var(--primary) !important;
   box-shadow: none;
   min-height: 21.875rem;
   z-index: 10;
@@ -2855,9 +2855,9 @@ ul,
 ol {
   &.sortable-list {
     li {
-      background-color: $primary-005;
+      background-color: var(--primary005);
       margin: 3px 0;
-      border: 1px solid $primary-005;
+      border: 1px solid var(--primary005);
       border-radius: 0.3rem;
       font-weight: 500;
 
@@ -2867,8 +2867,8 @@ ol {
       }
 
       &.selected {
-        background-color: $primary;
-        border: 1px solid $primary;
+        background-color: var(--primary);
+        border: 1px solid var(--primary);
         color: $white;
       }
     }
@@ -3208,7 +3208,7 @@ ol {
   .owl-dots {
     .owl-dot.active {
       span {
-        background: #00eb98 !important;
+        background: var(--primary) !important;
       }
     }
   }
@@ -3223,7 +3223,7 @@ ol {
 }
 
 .mat-step-icon.mat-step-icon-selected {
-  background-color: $primary !important;
+  background-color: var(--primary) !important;
 }
 
 .mat-step-label.mat-step-label-active {
@@ -3611,7 +3611,7 @@ div.record-picker {
 .ng-value-container
 .ng-value
 .ng-value-icon:hover {
-  background-color: $primary-09 !important;
+  background-color: var(--primary09) !important;
 }
 
 #liveAlertPlaceholder .close {
@@ -3628,7 +3628,7 @@ div.record-picker {
 
 .ngx-slider .ngx-slider-pointer,
 .ngx-slider .ngx-slider-selection {
-  background-color: $primary !important;
+  background-color: var(--primary) !important;
 }
 
 .ngx-slider .ngx-slider-pointer:after,
@@ -3710,7 +3710,7 @@ app-footer {
 .ng-dropdown-panel .ng-dropdown-panel-items .ng-optgroup.ng-option-marked,
 .ng-dropdown-panel .ng-dropdown-panel-items .ng-optgroup.ng-option-marked,
 .ng-optgroup {
-  background-color: $primary !important;
+  background-color: var(--primary) !important;
 }
 
 .ngx-container {
@@ -3838,10 +3838,10 @@ input[_ngcontent-ng-c1814545840] {
 }
 
 // .mdc-button__label{
-//   color: $primary;
+//   color: var(--primary);
 // }
 .mat-mdc-button:not(:disabled) {
-  color: $primary !important;
+  color: var(--primary) !important;
 }
 
 .demo-button-container .mdc-button__label {
