--- a/src/app/modules/challenges/components/challenge-call-card/challenge-call-card.component.scss
+++ b/src/app/modules/challenges/components/challenge-call-card/challenge-call-card.component.scss
@@ -2,6 +2,6 @@
 
 .bg-challenge-call {
   @include dark-layout {
-    background: rgba($primary, 0.5);
+    background: rgba(var(--primary-rgb), 0.5);
   }
 }
