--- a/src/app/modules/home/ranks-section/ranks-section.component.scss
+++ b/src/app/modules/home/ranks-section/ranks-section.component.scss
@@ -3,20 +3,20 @@
 .card-rank {
   &:nth-child(1), &:nth-child(2) {
     .card-header {
-      background: linear-gradient(to bottom, rgba($primary, 0.1), transparent);
+      background: linear-gradient(to bottom, rgba(var(--primary-rgb), 0.1), transparent);
 
       .card-icon {
-        border: 1px solid rgba($primary, 0.5);
+        border: 1px solid rgba(var(--primary-rgb), 0.5);
       }
     }
   }
 
   &:nth-child(3), &:nth-child(4) {
     .card-header {
-      background: linear-gradient(to bottom, rgba($primary, 0.1), transparent);
+      background: linear-gradient(to bottom, rgba(var(--primary-rgb), 0.1), transparent);
 
       .card-icon {
-        border: 1px solid rgba($primary, 0.5);
+        border: 1px solid rgba(var(--primary-rgb), 0.5);
       }
     }
   }
