--- a/src/app/modules/landing-page/sections/section-contact-us/section-contact-us.component.scss
+++ b/src/app/modules/landing-page/sections/section-contact-us/section-contact-us.component.scss
@@ -1,7 +1,7 @@
 @import 'styles/kep-imports';
 
 .landing-contact-info {
-  background: $primary-01;
+  background: var(--primary01);
 }
 
 .container {
