--- a/src/app/modules/landing-page/sections/section-get-started/section-get-started.component.scss
+++ b/src/app/modules/landing-page/sections/section-get-started/section-get-started.component.scss
@@ -5,7 +5,7 @@
   width: 100%;
   padding: 2rem 0;
   height: 100%;
-  background-color: $primary-05;
+  background-color: var(--primary05);
 
   &:before {
     background: url("assets/landing-page/get-started.svg") repeat;
