--- a/src/app/modules/landing-page/sections/section-header/section-header.component.scss
+++ b/src/app/modules/landing-page/sections/section-header/section-header.component.scss
@@ -19,7 +19,7 @@
   margin-bottom: 2rem;
   margin-top: 10rem;
   font-size: 2.625rem;
-  background: linear-gradient(to right, $green 0%, $primary 40%, $primary 60%, $red 100%);
+  background: linear-gradient(to right, $green 0%, var(--primary) 40%, var(--primary) 60%, $red 100%);
 
   background-clip: text;
   background-size: 200% auto;
