--- a/src/app/modules/testing/ui/pages/test-detail/test-detail.page.scss
+++ b/src/app/modules/testing/ui/pages/test-detail/test-detail.page.scss
@@ -42,11 +42,11 @@
     width: 40px;
     height: 40px;
     border-radius: 50%;
-    background: $primary-01;
+    background: var(--primary01);
     display: flex;
     align-items: center;
     justify-content: center;
-    color: $primary;
+    color: var(--primary);
     font-size: 1.1rem;
   }
 
