--- a/src/app/styles/vuexy-extended/scrollbar.scss
+++ b/src/app/styles/vuexy-extended/scrollbar.scss
@@ -11,13 +11,13 @@
 
 ::-webkit-scrollbar-thumb {
   border-radius: 10px;
-  box-shadow: inset 0 0 6px $primary;
+  box-shadow: inset 0 0 6px var(--primary);
   background-color: #D62929;
 }
 
 ::-webkit-scrollbar-thumb {
   border: 5px solid transparent;
   border-radius: 100px;
-  background-color: $primary;
+  background-color: var(--primary);
   background-clip: content-box;
 }
