--- a/src/assets/scss/bootstrap/_badge.scss
+++ b/src/assets/scss/bootstrap/_badge.scss
@@ -42,7 +42,7 @@
 .btn {
   &.btn-outline-primary {
     .badge {
-      background-color: $primary;
+      background-color: var(--primary);
       color: $black;
     }
 
