--- a/src/assets/scss/bootstrap/_forms.scss
+++ b/src/assets/scss/bootstrap/_forms.scss
@@ -45,13 +45,13 @@
 }
 
 .form-control-primary {
-  background-color: $primary-01;
+  background-color: var(--primary01);
   border: 0;
-  color: $primary;
+  color: var(--primary);
 
   &:focus {
-    background-color: $primary-01;
-    color: $primary;
+    background-color: var(--primary01);
+    color: var(--primary);
   }
 }
 
@@ -90,18 +90,18 @@
     border-radius: 0.25rem;
 
     &:hover {
-      background-color: $primary;
+      background-color: var(--primary);
       // color: #000 !important;
     }
 
     &:hover.active {
-      background-color: $primary;
+      background-color: var(--primary);
       color: #fff !important;
     }
   }
 
   option:checked {
-    background-color: $primary;
+    background-color: var(--primary);
     // color: $black;
   }
 
@@ -124,7 +124,7 @@
   &.form-checked-outline {
     &:checked {
       background-color: transparent;
-      border-color: $primary;
+      border-color: var(--primary);
     }
   }
 
@@ -192,7 +192,7 @@
     content: "\F633";
     font-family: bootstrap-icons !important;
     position: absolute;
-    color: $primary;
+    color: var(--primary);
     width: 0.625rem;
     height: 0.625rem;
     inset-block-start: -1px;
@@ -252,7 +252,7 @@
     content: "\F309";
     font-family: bootstrap-icons !important;
     position: absolute;
-    color: $primary;
+    color: var(--primary);
     width: 0.625rem;
     height: 0.625rem;
     inset-block-start: -1.08rem;
@@ -305,12 +305,12 @@
 
 fieldset:disabled .btn {
   color: $white;
-  background-color: $primary;
-  border-color: $primary;
+  background-color: var(--primary);
+  border-color: var(--primary);
 }
 
 .form-select:focus {
-  border-color: $primary-05;
+  border-color: var(--primary05);
   outline: 0;
   box-shadow: none;
 }
@@ -493,13 +493,13 @@ fieldset:disabled .btn {
   }
 
   &.on {
-    background-color: $primary-03;
+    background-color: var(--primary03);
 
     span {
-      background-color: $primary;
+      background-color: var(--primary);
 
       &::before {
-        color: $primary;
+        color: var(--primary);
       }
     }
 
@@ -656,7 +656,7 @@ fieldset:disabled .btn {
 }
 
 .label-primary {
-  background: $primary;
+  background: var(--primary);
   color: $white;
 }
 
@@ -779,16 +779,16 @@ fieldset:disabled .btn {
 .form-floating {
   &.floating-primary {
     label {
-      color: $primary;
+      color: var(--primary);
       opacity: 1;
     }
 
     input {
-      border: 1px solid $primary;
+      border: 1px solid var(--primary);
     }
 
     & > .form-control:focus ~ label {
-      color: $primary !important;
+      color: var(--primary) !important;
     }
   }
 
@@ -1046,7 +1046,7 @@ fieldset:disabled .btn {
         z-index: 3;
         height: 10px;
         width: 10px;
-        background: $primary;
+        background: var(--primary);
         border-radius: 50%;
         box-shadow: 0 0 0 2px $custom-white;
         transition: all .5s ease-in-out;
@@ -1173,8 +1173,8 @@ fieldset:disabled .btn {
 
     .wizard-step.active {
       .dot {
-        background-color: $primary;
-        box-shadow: 0 0 0 3px $primary-02;
+        background-color: var(--primary);
+        box-shadow: 0 0 0 3px var(--primary02);
       }
 
       &:before {
@@ -1223,7 +1223,7 @@ fieldset:disabled .btn {
       border-radius: .15rem;
       transition: all .3s ease-in;
       margin: 0 10px;
-      background-color: $primary;
+      background-color: var(--primary);
       color: $custom-white;
 
       &:hover {
@@ -1361,7 +1361,7 @@ fieldset:disabled .btn {
 }
 
 .wizard.wizard-tab .wizard-buttons .wizard-btn:hover {
-  background-color: $primary;
+  background-color: var(--primary);
 }
 
 .wizard.wizard-tab .wizard-buttons .wizard-btn:disabled {
@@ -1667,7 +1667,7 @@ input {
 }
 
 .tagify__tag.tagify--noAnim > div::before {
-  background: $primary-01 !important;
+  background: var(--primary01) !important;
 }
 
 .tagify__tag > div::before {
@@ -1854,7 +1854,7 @@ input {
 }
 
 .tagify__tag {
-  background-color: $primary-01;
+  background-color: var(--primary01);
 }
 
 #users-list {
