--- a/src/assets/scss/bootstrap/_navs_tabs.scss
+++ b/src/assets/scss/bootstrap/_navs_tabs.scss
@@ -14,8 +14,8 @@
   font-weight: 400;
 
   &.active {
-    background-color: $primary-01;
-    color: $primary;
+    background-color: var(--primary01);
+    color: var(--primary);
   }
 }
 
@@ -25,7 +25,7 @@
 
 .navbar-nav .nav-link.active,
 .navbar-nav .show > .nav-link {
-  color: $primary;
+  color: var(--primary);
 }
 
 .nav-link.disabled {
@@ -58,7 +58,7 @@
 .nav-pills .nav-link.active,
 .nav-pills .show > .nav-link {
   color: $black;
-  background-color: $primary;
+  background-color: var(--primary);
 }
 
 /* End::Nav-link */
@@ -77,7 +77,7 @@
 
   .nav-link {
     &.active {
-      background-color: $primary;
+      background-color: var(--primary);
       color: $black;
     }
   }
@@ -91,9 +91,9 @@
     border-block-start: 3px solid transparent;
 
     &.active {
-      background-color: $primary-01;
-      border-block-start: 3px solid $primary;
-      color: $primary;
+      background-color: var(--primary01);
+      border-block-start: 3px solid var(--primary);
+      color: var(--primary);
     }
   }
 }
@@ -112,8 +112,8 @@
 
   .nav-link.active {
     background-color: transparent;
-    border-block-end: 3px solid $primary;
-    color: $primary;
+    border-block-end: 3px solid var(--primary);
+    color: var(--primary);
   }
 }
 
@@ -155,7 +155,7 @@
 
   .nav-link {
     &.active {
-      background-color: $primary;
+      background-color: var(--primary);
       color: $black;
       border: 0;
     }
@@ -175,10 +175,10 @@
 
   &.nav-pills .nav-link {
     &.active {
-      border: 1px solid $primary;
-      border-block-end: 2px solid $primary;
+      border: 1px solid var(--primary);
+      border-block-end: 2px solid var(--primary);
       background-color: transparent;
-      color: $primary;
+      color: var(--primary);
     }
   }
 }
@@ -203,8 +203,8 @@
       font-weight: 500;
 
       &.active {
-        background: $primary-01;
-        color: $primary;
+        background: var(--primary01);
+        color: var(--primary);
         border: 1px solid transparent;
       }
 
@@ -230,18 +230,18 @@
 
     .nav-link {
       background-color: transparent;
-      color: $primary;
-      border: 1px solid $primary;
+      color: var(--primary);
+      border: 1px solid var(--primary);
       font-size: 0.8rem;
 
       &.active {
-        background: $primary;
+        background: var(--primary);
         color: $black;
-        border: 1px solid $primary;
+        border: 1px solid var(--primary);
       }
 
       &:hover, &:focus {
-        border: 1px solid $primary;
+        border: 1px solid var(--primary);
       }
     }
   }
@@ -273,7 +273,7 @@
       }
 
       &.active {
-        background-color: $primary;
+        background-color: var(--primary);
         color: $black;
         position: relative;
 
@@ -285,7 +285,7 @@
           transform: rotate(45deg);
           width: 1rem;
           height: 1rem;
-          background-color: $primary;
+          background-color: var(--primary);
         }
       }
     }
@@ -322,7 +322,7 @@
     .nav-link {
       min-width: 160px;
       max-width: 160px;
-      border: 1px solid $primary;
+      border: 1px solid var(--primary);
       padding: 1.3rem;
       margin-block-end: 0.5rem;
 
@@ -332,25 +332,25 @@
         line-height: 2rem;
         text-align: center;
         font-size: 1rem;
-        background: $primary;
+        background: var(--primary);
         color: $black;
         border-radius: 3.125rem;
         font-weight: 500;
       }
 
       &.active {
-        background: $primary;
-        border: 1px solid $primary;
+        background: var(--primary);
+        border: 1px solid var(--primary);
         color: $black;
 
         i {
           background: $black;
-          color: $primary;
+          color: var(--primary);
         }
       }
 
       &:hover, &:focus {
-        border: 1px solid $primary;
+        border: 1px solid var(--primary);
       }
     }
   }
@@ -376,7 +376,7 @@
 .nav-link {
   &:focus,
   &:hover {
-    color: $primary;
+    color: var(--primary);
   }
 }
 
@@ -423,7 +423,7 @@
     padding: 0.35rem 1rem;
 
     &.active {
-      background-color: $primary;
+      background-color: var(--primary);
       color: $black;
       box-shadow: $box-shadow;
       transition: color 0.15s ease-in;
@@ -463,7 +463,7 @@
         height: 1.875rem;
         padding: 0.35rem;
         // border-radius: 50px;
-        background-color: $primary-01;
+        background-color: var(--primary01);
         color: var(--default-text-color);
         display: inline-block;
       }
@@ -476,11 +476,11 @@
         background-color: transparent;
         position: relative;
         border: 0;
-        color: $primary;
+        color: var(--primary);
 
         i {
-          background-color: $primary-01;
-          color: $primary;
+          background-color: var(--primary01);
+          color: var(--primary);
         }
 
         &:before {
@@ -492,7 +492,7 @@
           inset-block-end: 0;
           width: 100%;
           height: 0.175rem;
-          background-color: $primary;
+          background-color: var(--primary);
           border-radius: 50px;
         }
       }
@@ -567,15 +567,15 @@
       &.active {
         background-color: transparent;
         border: 0;
-        color: $primary;
+        color: var(--primary);
 
         &:before {
-          background-color: $primary;
+          background-color: var(--primary);
         }
 
         &:after {
-          border-color: $primary;
-          color: $primary;
+          border-color: var(--primary);
+          color: var(--primary);
         }
       }
     }
@@ -607,7 +607,7 @@
       &.active {
         background-color: transparent;
         border: 0;
-        color: $primary;
+        color: var(--primary);
         position: relative;
         overflow: hidden;
 
@@ -621,8 +621,8 @@
           overflow: hidden;
           z-index: 1;
           height: 0.75rem;
-          background-color: $primary;
-          border: 1px solid $primary;
+          background-color: var(--primary);
+          border: 1px solid var(--primary);
         }
 
         &:after {
@@ -632,7 +632,7 @@
           height: 1px;
           inset-inline-start: 30%;
           inset-block-end: 0;
-          background-color: $primary;
+          background-color: var(--primary);
         }
       }
     }
@@ -640,8 +640,8 @@
 }
 
 #tab-style-4 .tab-pane.active {
-  border: 1px solid $primary;
-  background-color: $primary;
+  border: 1px solid var(--primary);
+  background-color: var(--primary);
   color: $black;
 }
 
@@ -657,7 +657,7 @@
     }
 
     .nav-link.active {
-      background: $primary;
+      background: var(--primary);
     }
   }
 }
@@ -669,7 +669,7 @@
   border: 0;
   background-color: $custom-white;
   border-radius: $default-radius;
-  color: $primary;
+  color: var(--primary);
   padding: 0.5rem;
 
   .nav-item {
@@ -681,7 +681,7 @@
     }
 
     .nav-link {
-      color: $primary;
+      color: var(--primary);
       padding: 0.5rem 1rem;
       font-size: 0.813rem;
       border: 0;
@@ -689,7 +689,7 @@
 
       &.active {
         border: 0;
-        background-color: $primary;
+        background-color: var(--primary);
         color: $black;
         border: 0;
         box-shadow: 0px 3px 10px 0px rgba(var(--dark-rgb), 0.05);
@@ -715,8 +715,8 @@
 
     &:active,
     &.active {
-      background-color: $primary-01;
-      color: $primary;
+      background-color: var(--primary01);
+      color: var(--primary);
     }
   }
 }
@@ -728,8 +728,8 @@
   .nav-item {
     .nav-link {
       &.active {
-        background-color: $primary-01;
-        color: $primary;
+        background-color: var(--primary01);
+        color: var(--primary);
       }
     }
   }
