--- a/src/assets/scss/bootstrap/_progress.scss
+++ b/src/assets/scss/bootstrap/_progress.scss
@@ -11,7 +11,7 @@
 
 .progress-bar {
   color: $black;
-  background-color: $primary;
+  background-color: var(--primary);
 }
 
 @keyframes progress-animate {
@@ -87,12 +87,12 @@
       width: 1.15rem;
       height: 1.15rem;
       border-radius: 50%;
-      box-shadow: 0 0.313rem 0.313rem $primary-02;
+      box-shadow: 0 0.313rem 0.313rem var(--primary02);
       background: $white;
       position: absolute;
       inset-inline-end: -0.375rem;
       inset-block-start: -0.375rem;
-      border: 0.25rem solid $primary;
+      border: 0.25rem solid var(--primary);
     }
 
     // &.bg-secondary{
@@ -133,7 +133,7 @@
   .progress-bar-title {
     padding: 0.313rem 0.625rem;
     margin: 0;
-    background: $primary;
+    background: var(--primary);
     border-radius: 0.313rem 0 0 0.313rem;
     font-size: 0.625rem;
     font-weight: 400;
@@ -146,7 +146,7 @@
 
     &:after {
       content: "";
-      border-inline-start: 1.063rem solid $primary;
+      border-inline-start: 1.063rem solid var(--primary);
       border-block-start: 0.688rem solid transparent;
       border-block-end: 0.688rem solid transparent;
       position: absolute;
@@ -200,7 +200,7 @@
     height: 1.25rem;
     line-height: 1.25rem;
     border-radius: 0.188rem;
-    background: $primary;
+    background: var(--primary);
     box-shadow: 0 0.313rem 0.313rem rgba(0, 0, 0, 0.4);
     font-size: 0.625rem;
     font-weight: 400;
@@ -212,7 +212,7 @@
 
     &:after {
       content: "";
-      border-block-start: 0.438rem solid $primary;
+      border-block-start: 0.438rem solid var(--primary);
       border-inline-start: 0.438rem solid transparent;
       border-inline-end: 0.438rem solid transparent;
       position: absolute;
@@ -317,7 +317,7 @@
     }
 
     .progress-bar-value {
-      border: 0.125rem solid $primary;
+      border: 0.125rem solid var(--primary);
       width: 2.5rem;
       height: 1.563rem;
       line-height: 1.313rem;
@@ -325,7 +325,7 @@
       background: $custom-white;
       font-size: 0.625rem;
       font-weight: 400;
-      color: $primary;
+      color: var(--primary);
       text-align: center;
       position: absolute;
       inset-inline-end: -0.625rem;
@@ -363,7 +363,7 @@
 /* Start:: custom-progress-4 */
 .custom-progress-4 {
   &.progress {
-    background-color: $primary-01;
+    background-color: var(--primary01);
     border-radius: 0.25rem;
 
     &.secondary {
@@ -415,7 +415,7 @@
       inset-inline-end: 0.313rem;
       font-weight: 400;
       font-size: 0.813rem;
-      color: $primary;
+      color: var(--primary);
     }
   }
 }
