--- a/src/assets/scss/custom/_authentication.scss
+++ b/src/assets/scss/custom/_authentication.scss
@@ -130,7 +130,7 @@
       inset-inline-end: 0;
       inset-block-start: 0;
       inset-block-end: 0;
-      background-color: $primary-06;
+      background-color: var(--primary06);
       z-index: -1;
     }
 
