--- a/src/assets/scss/custom/_plugins.scss
+++ b/src/assets/scss/custom/_plugins.scss
@@ -55,20 +55,20 @@
 }
 
 .choices__list--dropdown .choices__item--selectable.is-highlighted {
-  background-color: $primary !important;
+  background-color: var(--primary) !important;
   color: $black !important;
 }
 
 .choices__list--dropdown .choices__item--selectable {
   &.is-highlighted {
-    background-color: $primary !important;
+    background-color: var(--primary) !important;
     color: $black !important;
   }
 }
 
 .choices__list--dropdown .choices__item--selectable {
   &.is-selected {
-    color: $primary !important;
+    color: var(--primary) !important;
 
     &.is-highlighted {
       color: $black !important;
@@ -90,8 +90,8 @@
 }
 
 .choices__list--multiple .choices__item {
-  background-color: $primary !important;
-  border: 1px solid $primary !important;
+  background-color: var(--primary) !important;
+  border: 1px solid var(--primary) !important;
   color: $black !important;
 }
 
@@ -383,7 +383,7 @@
   &.bg-primary-transparent {
     .fc-event-title,
     .fc-event-time {
-      color: $primary;
+      color: var(--primary);
     }
   }
 
@@ -424,10 +424,10 @@
 }
 
 .fc-h-event {
-  background-color: $primary-01 !important;
+  background-color: var(--primary01) !important;
 
   .fc-event-title {
-    color: $primary;
+    color: var(--primary);
   }
 }
 
@@ -447,8 +447,8 @@
 }
 
 .fc .fc-button-primary {
-  background-color: $primary !important;
-  border-color: $primary !important;
+  background-color: var(--primary) !important;
+  border-color: var(--primary) !important;
   color: $black !important;
 }
 
@@ -459,8 +459,8 @@
 .fc .fc-button-primary:not(:disabled):active,
 .fc .fc-button-primary:not(:disabled).fc-button-active {
   color: #000;
-  background-color: $primary;
-  border-color: $primary;
+  background-color: var(--primary);
+  border-color: var(--primary);
   opacity: 0.9;
 }
 
@@ -485,7 +485,7 @@
 }
 
 .fc .fc-daygrid-day.fc-day-today {
-  background-color: $primary-01 !important;
+  background-color: var(--primary01) !important;
 }
 
 .fc-theme-standard .fc-list {
@@ -614,7 +614,7 @@
 }
 
 .flatpickr-day.today.inRange {
-  color: $primary !important;
+  color: var(--primary) !important;
 }
 
 .dayContainer {
@@ -633,7 +633,7 @@
   width: 1.25rem !important;
   height: 1.25rem !important;
   padding: 0.25rem;
-  fill: $primary;
+  fill: var(--primary);
 }
 
 .flatpickr-day.inRange {
@@ -645,7 +645,7 @@
 }
 
 .flatpickr-current-month .flatpickr-monthDropdown-months {
-  background-color: $primary-01 !important;
+  background-color: var(--primary01) !important;
   border-radius: 0.25rem !important;
 }
 
@@ -675,8 +675,8 @@
 }
 
 .flatpickr-day.today {
-  border-color: $primary !important;
-  background-color: $primary !important;
+  border-color: var(--primary) !important;
+  background-color: var(--primary) !important;
   color: $black !important;
 }
 
@@ -698,9 +698,9 @@
 .flatpickr-day.selected.nextMonthDay,
 .flatpickr-day.startRange.nextMonthDay,
 .flatpickr-day.endRange.nextMonthDay {
-  background: $primary !important;
+  background: var(--primary) !important;
   color: $black !important;
-  border-color: $primary !important;
+  border-color: var(--primary) !important;
 }
 
 .flatpickr-day.inRange,
@@ -720,8 +720,8 @@
 }
 
 .flatpickr-day.today:hover {
-  background-color: $primary !important;
-  border-color: $primary !important;
+  background-color: var(--primary) !important;
+  border-color: var(--primary) !important;
   color: $white !important;
 }
 
@@ -757,7 +757,7 @@
 
 .flatpickr-months,
 .flatpickr-weekdays {
-  background-color: $primary-01 !important;
+  background-color: var(--primary01) !important;
 }
 
 .flatpickr-months .flatpickr-prev-month,
@@ -766,8 +766,8 @@
   padding-block-start: 0.313rem !important;
   padding-inline: 0.313rem !important;
   padding-block-end: 0 !important;
-  color: $primary !important;
-  fill: $primary !important;
+  color: var(--primary) !important;
+  fill: var(--primary) !important;
 }
 
 @media (min-width: 420px) {
@@ -822,7 +822,7 @@
 
 .flatpickr-months .flatpickr-prev-month:hover,
 .flatpickr-months .flatpickr-next-month:hover {
-  stroke: $primary;
+  stroke: var(--primary);
 }
 
 .flatpickr-day {
@@ -838,7 +838,7 @@
 }
 
 .flatpickr-current-month .numInputWrapper span.arrowUp:after {
-  border-block-end-color: $primary !important;
+  border-block-end-color: var(--primary) !important;
 }
 
 .flatpickr-months .flatpickr-prev-month:hover svg,
@@ -853,34 +853,34 @@
 .numInputWrapper span.arrowUp:after {
   border-inline-start: 0.25rem solid transparent !important;
   border-inline-end: 0.25rem solid transparent !important;
-  border-block-end: 0.25rem solid $primary-05 !important;
+  border-block-end: 0.25rem solid var(--primary05) !important;
   inset-block-start: 75% !important;
 }
 
 .flatpickr-current-month .numInputWrapper span.arrowDown:after {
-  border-block-start-color: $primary !important;
+  border-block-start-color: var(--primary) !important;
 }
 
 .numInputWrapper span.arrowDown:after {
   border-inline-start: 0.25rem solid transparent !important;
   border-inline-end: 0.25rem solid transparent !important;
-  border-block-start: 0.25rem solid $primary-05 !important;
+  border-block-start: 0.25rem solid var(--primary05) !important;
   inset-block-start: 15% !important;
 }
 
 span.flatpickr-weekday {
-  color: $primary-08 !important;
+  color: var(--primary08) !important;
   font-weight: 700 !important;
 }
 
 .flatpickr-months .flatpickr-month {
-  color: $primary !important;
-  fill: $primary !important;
+  color: var(--primary) !important;
+  fill: var(--primary) !important;
 }
 
 .flatpickr-monthDropdown-months,
 .numInput {
-  color: $primary !important;
+  color: var(--primary) !important;
 }
 
 .pcr-app {
@@ -989,7 +989,7 @@ span.flatpickr-weekday {
 }
 
 .noUi-connect {
-  background: $primary !important;
+  background: var(--primary) !important;
 }
 
 .noUi-vertical .noUi-handle {
@@ -1037,7 +1037,7 @@ span.flatpickr-weekday {
     inset-inline-end: -0.563rem;
     /* half the width */
     border-radius: 50px !important;
-    background-color: $primary !important;
+    background-color: var(--primary) !important;
     border: 1px solid $custom-white !important;
 
     &:before,
@@ -1054,7 +1054,7 @@ span.flatpickr-weekday {
     border: 0 !important;
     box-shadow: none !important;
     border-radius: 0 !important;
-    background: $primary !important;
+    background: var(--primary) !important;
     height: 1.125rem !important;
     width: 1.125rem !important;
     inset-block-start: -0.45rem !important;
@@ -1104,7 +1104,7 @@ span.flatpickr-weekday {
 }
 
 #color3 .noUi-connect {
-  background: $primary !important;
+  background: var(--primary) !important;
 }
 
 #slider-hide .noUi-tooltip {
@@ -1261,8 +1261,8 @@ span.flatpickr-weekday {
   font-size: 1.25rem;
   line-height: 0.875rem;
   opacity: 0.8;
-  background: $primary;
-  border: solid 0.188rem $primary;
+  background: var(--primary);
+  border: solid 0.188rem var(--primary);
   border-radius: 0.25rem;
   box-shadow: 0.125rem 0.125rem 0.625rem $black-3;
   text-shadow: 0.063rem 0.063rem 0.063rem $gray-6;
@@ -1423,7 +1423,7 @@ canvas {
 
 /* Start::Simplebar */
 .simplebar-scrollbar:before {
-  background: $primary !important;
+  background: var(--primary) !important;
   border-radius: 0 !important;
   inset-inline-end: 0 !important;
   width: 0.375rem;
@@ -1491,7 +1491,7 @@ canvas {
 }
 
 .filepond--file {
-  background-color: $primary !important;
+  background-color: var(--primary) !important;
 }
 
 .filepond--file {
@@ -1707,11 +1707,11 @@ canvas {
 }
 
 .select2-container--default .select2-results__option--selected {
-  background-color: $primary !important;
+  background-color: var(--primary) !important;
   color: $black !important;
 
   &.select2-results__option--highlighted {
-    background-color: $primary !important;
+    background-color: var(--primary) !important;
     color: $black !important;
   }
 }
@@ -1738,9 +1738,9 @@ canvas {
 .select2-container--default
 .select2-selection--multiple
 .select2-selection__choice {
-  background-color: $primary !important;
+  background-color: var(--primary) !important;
   color: $black !important;
-  border: 1px solid $primary !important;
+  border: 1px solid var(--primary) !important;
   border-radius: $default-radius !important;
   margin-block-start: 0.375rem !important;
   padding: 0px 18px !important;
@@ -1770,7 +1770,7 @@ canvas {
 .select2-container--default
 .select2-selection--multiple
 .select2-selection__choice__remove:focus {
-  background-color: $primary !important;
+  background-color: var(--primary) !important;
 }
 
 .select2-results__option span img,
@@ -1968,7 +1968,7 @@ td.gridjs-td {
 
 .gridjs-pagination .gridjs-pages button.gridjs-currentPage {
   font-weight: 600 !important;
-  background-color: $primary !important;
+  background-color: var(--primary) !important;
   color: $white !important;
 }
 
@@ -1987,7 +1987,7 @@ input.gridjs-input {
 
   &:focus {
     box-shadow: none !important;
-    border: 1px solid $primary !important;
+    border: 1px solid var(--primary) !important;
   }
 }
 
@@ -2203,8 +2203,8 @@ table.dataTable.dtr-inline.collapsed > tbody > tr > td.dtr-control:before,
 table.dataTable.dtr-inline.collapsed > tbody > tr > th.dtr-control:before {
   color: $white !important;
   border: 0.15em solid $white !important;
-  box-shadow: 0 0 0.2em $primary !important;
-  background-color: $primary !important;
+  box-shadow: 0 0 0.2em var(--primary) !important;
+  background-color: var(--primary) !important;
 }
 
 table.dataTable.dtr-inline.collapsed
@@ -2253,7 +2253,7 @@ div.dtr-modal div.dtr-modal-background {
   box-shadow: none !important;
   font-weight: 500 !important;
   padding: 0.375rem 0.75rem !important;
-  background-color: $primary;
+  background-color: var(--primary);
   color: $black;
   border: 0;
 }
@@ -2359,7 +2359,7 @@ div.dataTables_wrapper div.dataTables_filter#scroll-vertical_filter input {
 }
 
 table.dataTable > tbody > tr.selected > * {
-  background-color: $primary-01;
+  background-color: var(--primary01);
   color: var(--default-text-color) !important;
   box-shadow: none !important;
 }
@@ -2428,7 +2428,7 @@ table.dataTable > tbody > tr.selected > * {
   }
 
   .swal2-styled.swal2-confirm {
-    background-color: $primary !important;
+    background-color: var(--primary) !important;
     color: $black;
   }
 
@@ -2508,7 +2508,7 @@ table.dataTable > tbody > tr.selected > * {
   }
 
   .swal2-close:hover {
-    color: $primary;
+    color: var(--primary);
   }
 
   .swal2-styled.swal2-deny {
