--- a/src/assets/scss/custom/_widgets.scss
+++ b/src/assets/scss/custom/_widgets.scss
@@ -15,7 +15,7 @@
     }
 
     &:nth-child(1)::before {
-      background-color: $primary;
+      background-color: var(--primary);
       opacity: 0.3;
     }
 
@@ -55,7 +55,7 @@
   border-top-style: solid !important;
 
   &.border-top-primary {
-    border-top-color: $primary;
+    border-top-color: var(--primary);
   }
 
   &.border-top-secondary {
@@ -170,7 +170,7 @@
   &::before {
     content: "";
     position: absolute;
-    background: $primary;
+    background: var(--primary);
     width: 100%;
     height: 100%;
     inset-block-start: 0;
