--- a/src/assets/scss/pages/_ecommerce.scss
+++ b/src/assets/scss/pages/_ecommerce.scss
@@ -49,7 +49,7 @@
 
       .cart {
         background-color: rgba(var(--primary-rgb), 0.2);
-        color: $primary;
+        color: var(--primary);
         inset-block-start: 4rem;
         inset-inline-end: 1.75rem;
       }
@@ -70,14 +70,14 @@
   padding-inline-end: 1.5rem;
   padding-block-end: 0.3rem;
   padding-inline-start: 0.75rem;
-  background-color: $primary-01;
-  color: $primary;
+  background-color: var(--primary01);
+  color: var(--primary);
   border-radius: $default-radius;
   font-weight: 500;
   font-size: 0.625rem;
 
   &:hover {
-    color: $primary;
+    color: var(--primary);
   }
 
   &:before {
@@ -411,7 +411,7 @@
   width: 60px;
   height: 60px;
   padding: 10px;
-  background-color: $primary-005;
+  background-color: var(--primary005);
   align-items: center;
   justify-content: center;
   display: flex;
@@ -434,7 +434,7 @@
     inset-block-end: 0;
     position: absolute;
     width: 1px;
-    border-inline-start: 1px dashed $primary;
+    border-inline-start: 1px dashed var(--primary);
     height: 100%;
     opacity: 0.2;
   }
