--- a/src/assets/scss/util/_border.scss
+++ b/src/assets/scss/util/_border.scss
@@ -25,27 +25,27 @@
 
   /* Start::Border Colors */
   &.border-primary {
-    border: 1px solid $primary !important;
+    border: 1px solid var(--primary) !important;
     opacity: 1;
 
     &.border-opacity-10 {
-      border-color: $primary-01 !important;
+      border-color: var(--primary01) !important;
     }
 
     &.border-opacity-25 {
-      border-color: $primary-03 !important;
+      border-color: var(--primary03) !important;
     }
 
     &.border-opacity-50 {
-      border-color: $primary-05 !important;
+      border-color: var(--primary05) !important;
     }
 
     &.border-opacity-75 {
-      border-color: $primary-08 !important;
+      border-color: var(--primary08) !important;
     }
 
     &.border-opacity-100 {
-      border-color: $primary !important;
+      border-color: var(--primary) !important;
     }
   }
 
@@ -443,7 +443,7 @@
   }
 
   &.border-primary {
-    border-color: $primary !important;
+    border-color: var(--primary) !important;
   }
 
   &.border-secondary {
@@ -487,7 +487,7 @@
   }
 
   &.border-primary {
-    border-color: $primary !important;
+    border-color: var(--primary) !important;
   }
 
   &.border-secondary {
@@ -531,7 +531,7 @@
   }
 
   &.border-primary {
-    border-color: $primary !important;
+    border-color: var(--primary) !important;
   }
 
   &.border-secondary {
@@ -575,7 +575,7 @@
   }
 
   &.border-primary {
-    border-color: $primary !important;
+    border-color: var(--primary) !important;
   }
 
   &.border-secondary {
