--- a/src/styles.scss
+++ b/src/styles.scss
@@ -54,8 +54,8 @@
   margin-left: 0.5rem;
 }
 
-.active:has(> kep-icon) {
-  filter: drop-shadow(0 0 5px $primary);
+app-sidebar .active:has(> kep-icon) {
+  filter: drop-shadow(0 0 5px var(--primary));
 }
 
 .cursor-pointer {
@@ -111,7 +111,7 @@ html[data-theme-mode="light"] {
   }
 
   .page-item.active .page-link {
-    background: $primary;
+    background: var(--primary);
   }
 
   .offcanvas, .canvas-footer, .nav-link.active, .modal-content, .custom-btn-icons, .swal2-container .swal2-popup {
@@ -132,5 +132,9 @@ html[data-theme-mode="light"] {
 
   .ng-option-label, .apexcharts-tooltip-text {
     color: black !important;
+  }
+
+  span.bg-primary, .bg-primary, .text-bg-primary {
+    color: white !important;
   }
 }
